tests/parser/cases/neg_switch.err
tests/parser/cases/neg_switch.sml:4:5: syntax error: multiple default labels in switch
