tests/parser/cases/neg_switch.sml
switch (x) {
    default:
    case 0:
    default:
}
